# dcadec

./: .gitmodules  CMakeLists.txt
libdcadec/: dca_stream.c  dca_stream.h  ta.h
